# sijaku

./: .env.example  .gitignore  compose.yml  docker-compose.yml  justfile  pyproject.toml
accounts/: forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_customuser_role.py  0002_user_email.py
config/: asgi.py  settings.py  urls.py
data/: forms.py  models.py  urls.py  utils.py  views.py
data/migrations/: 0001_initial.py  0002_alter_jabatan_dosen.py  0003_matakuliah.py  0004_matakuliah_semester.py  0005_alter_matakuliah_semester.py  0006_alter_matakuliah_options_tahunakademik.py  0007_ruangan.py  0008_pemetaandosenmk.py  0009_alter_jabatan_dosen.py  0010_peminatan_matakuliah_tipe_matakuliah_peminatan.py  0011_remove_ruangan_keterangan_ruangan_kapasitas.py  0012_kelas.py  0013_jadwalharian.py  0014_jadwal.py  0015_alter_kelas_unique_together_alter_kelas_nama_and_more.py  0016_validasipemetaandosenmk_validasipemetaandosenmklog.py  0017_alter_jadwal_unique_together_remove_jadwal_dosen_and_more.py
data/templatetags/: data_tags.py
penjadwalan/: apps.py  consumers.py  models.py  routing.py  urls.py  views.py
penjadwalan/migrations/: 0001_initial.py
sijaku/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
sijaku/migrations/: 0001_initial.py  0002_alter_dosen_user_alter_staf_user.py  0002_alter_jabatan_dosen.py  0002_staf.py  0003_delete_staf.py  0003_hari_jamkuliah_matakuliah_ruangan_jadwalperkuliahan.py  0003_matakuliah.py  0004_matakuliah_dosen_pengampu_matakuliah_usulan_dosen.py  (+15 more)
templates/: base.html  welcome.html
(+67 files in other folders)
