[project]
name = "sijaku"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "django>=5.2.1",
    "django-environ>=0.12.0",
    "django-tailwind[reload]>=4.0.1",
    "djlint>=1.36.4",
    "pymysql>=1.1.1",
]
